--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     </main>
     <footer>
         <div class="footer-menu">
-            <div class="wrapper">
+            <div class="wrapper ais">
                 <ul>
                     <li><a href="#">Будинки</a></li>
                     <li><a href="#">Інфраструктура</a></li>
@@ -186,7 +186,7 @@
                     <li><a href="#">Страхування</a></li>
                     <li><a href="#">Контакти</a></li>
                 </ul>
-                <ul class="footer-contacts">
+                <ul class="contacts">
                     <li><a href="#">+38(097) 100-25-25</a></li>
                     <li><a href="#">+38(097) 100-25-25</a></li>
                 </ul>
