--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                         <li><a href="#">Акції</a></li>
                         <li><a href="#">Контакти</a></li>
                     </ul>
-                    <ul class="ico">
-                        <li><a href="#"><img src="img/fb.png" alt="facebook-іконка"></a></li>
-                        <li><a href="#"><img src="img/tw.png" alt="twitter-іконка"></a></li>
-                        <li><a href="#"><img src="img/inst.png" alt="instagram-іконка"></a></li>
+                    <ul class="social">
+                        <li><a href="#" class="fb"></a></li>
+                        <li><a href="#" class="tw"></a></li>
+                        <li><a href="#" class="inst"></a></li>
                     </ul>
                 </div>
             </div>
