contacts footer-menu

--- a/index.html
+++ b/index.html
@@ -186,9 +186,9 @@
                     <li><a href="#">Страхування</a></li>
                     <li><a href="#">Контакти</a></li>
                 </ul>
-                <ul class="contacts">
-                    <li><a href="#">+38(097) 100-25-25</a></li>
-                    <li><a href="#">+38(097) 100-25-25</a></li>
+                <ul class="footer-contacts">
+                    <li><a href="#"><b>+38(097) 100-25-25</b></a></li>
+                    <li><a href="#"><b>+38(097) 100-25-25</b></a></li>
                 </ul>
                 <ul class="footer-sms">
                     <li><a href="#" class="email">hataplus@hata.com.ua</a></li>
