--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <nav>
             <div class="header-line">
-                <div class="wrapper">
+                <div class="wrapper df-sb-aic">
                     <ul class="menu">
                         <li><a href="#">Головна</a></li>
                         <li><a href="#">Про компанію</a></li>
@@ -174,7 +174,7 @@
     </main>
     <footer>
         <div class="footer-menu">
-            <div class="wrapper ais">
+            <div class="wrapper ais df-sb-aic">
                 <ul>
                     <li><a href="#">Будинки</a></li>
                     <li><a href="#">Інфраструктура</a></li>
@@ -203,4 +203,4 @@
 
 </body>
 
-</html>
+</html]     
