href price-home

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <div class="header-line">
                 <div class="wrapper df-sb-aic">
                     <ul class="menu">
-                        <li><a href="#">Головна</a></li>
+                        <li><a href="/">Головна</a></li>
                         <li><a href="#">Про компанію</a></li>
-                        <li><a href="#">Наші будівлі</a></li>
+                        <li><a href="price.html">Наші будівлі</a></li>
                         <li><a href="#">Акції</a></li>
                         <li><a href="#">Контакти</a></li>
                     </ul>
