--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <li><a href="#">Про компанію</a></li>
                         <li><a href="price.html">Наші будівлі</a></li>
                         <li><a href="#">Акції</a></li>
-                        <li><a href="#">Контакти</a></li>
+                        <li><a href="contacts.html">Контакти</a></li>
                     </ul>
                     <ul class="social">
                         <li><a href="#" class="fb"></a></li>
