--- a/price.html
+++ b/price.html
@@ -20,7 +20,7 @@
                             <li><a href="#">Про компанію</a></li>
                             <li><a href="price.html">Наші будівлі</a></li>
                             <li><a href="#">Акції</a></li>
-                            <li><a href="#">Контакти</a></li>
+                            <li><a href="contacts.html">Контакти</a></li>
                         </ul>
                         <ul class="social">
                             <li><a href="#" class="fb"></a></li>
@@ -54,7 +54,7 @@
                     Послуга може бути надана кожному з наших гостей, незалежно від терміну проживання в готелі та
                     категорії обраного номера.</p>
             </article>
-            <table>
+            <table class="price-table">
                 <thead>
                     <tr>
                         <td>Назва котеджу</td>
