--- a/contacts.html
+++ b/contacts.html
@@ -59,8 +59,8 @@
                         <li>
                             <p>с. Війтівці, Хмельницька обл. 27500</p>
                         </li>
-                        <li><a href="#">+38(097) 100-25-25</a></li>
-                        <li><a href="#">+38(097) 100-25-25</a></li>
+                        <li><a href="tel:+380971002525">+38(097) 100-25-25</a></li>
+                        <li><a href="tel:+380971002525">+38(097) 100-25-25</a></li>
                         <li><a href="#">hataplus@hata.com.ua</a></li>
                     </ul>
                     <ul>
@@ -70,11 +70,11 @@
                         <li>
                             <p>менеджер:</p>
                         </li>
-                        <li><a href="#">+38(067) 123-10-05</a></li>
+                        <li><a href="tel:+380971002525">+38(067) 123-10-05</a></li>
                         <li>
                             <p>директор:x</p>
                         </li>
-                        <li><a href="#">+38(068) 950-27-91</a></li>
+                        <li><a href="tel:+380971002525">+38(068) 950-27-91</a></li>
                     </ul>
                     <ul>
                         <li>
