delete email folder

--- a/email.html
+++ b/email.html
@@ -6,7 +6,10 @@
 </head>
 <body>
     <table>
-        
+        <tr>
+            <td><img src="" alt="logo"></td>
+            <td></td>
+        </tr>
     </table>
 </body>
 </html>
