--- a/email.html
+++ b/email.html
@@ -1,15 +1,185 @@
 <html lang="uk">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="email.css">
     <title>Hata-Plus</title>
 </head>
+
 <body>
     <table>
         <tr>
-            <td><img src="" alt="logo"></td>
-            <td></td>
+            <td class="bg-gray"></td>
+            <td>
+                <table class="header">
+                    <tr>
+                        <td><a href="index.html"><img
+                                    src="https://github.com/TarasNaumov/HataPlus/blob/master/img/logo.png?raw=true"
+                                    alt="logo"></a></td>
+                        <td>
+                            <table border="0" align="center" class="contact">
+                                <tr>
+                                    <td class="tell">
+                                        <a href="#"></a>
+                                    </td>
+                                    <td><a href="tell:+380971002525">+38(097) 100-25-25</a></td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <p>контактний телефон у Вашому місті</p>
+                                    </td>
+                                </tr>
+                            </table>
+                        </td>
+                    </tr>
+                </table>
+            </td>
+            <td class="bg-gray"></td>
+        </tr>
+    </table>
+    <table>
+        <td class="bg-transparent"></td>
+        <td class="banner">
+            <img src="https://github.com/TarasNaumov/HataPlus/blob/master/img/email-banner.jpg?raw=true" alt="nuture">
+        </td>
+        <td class="bg-transparent"></td>
+    </table>
+    <table>
+        <td class="bg-transparent"></td>
+        <td class="info">
+            <h1>Компанія “Хата Плюс”</h1>
+            <p>Напевно кожен з нас не раз думав про те, щоб купити будинок котедж
+                і насолоджуватися життям в гармонії з природою. Дійсно, для багатьох жителів мегаполісу заміська
+                нерухомість під містом стала справжньою віддушиною
+                і порятунком від сумній життя в багатоповерхівках спальних районів. </p>
+            <a href="index.html">Детальніше про нас</a>
+        </td>
+        <td class="bg-transparent"></td>
+    </table>
+    <table class="pluses">
+        <tr>
+            <td class="bg-transparent"></td>
+            <td>
+                <table>
+                    <tr>
+                        <td class="pluses-container">
+                            <img src="https://github.com/TarasNaumov/HataPlus/blob/master/img/point.png?raw=true"
+                                alt="point"><br>
+                            <h2>Зручне розташування</h2>
+                            <p>Наші котеджі знаходяться по всій країні</p>
+                        </td>
+                        <td class="pluses-container">
+                            <img src="https://github.com/TarasNaumov/HataPlus/blob/master/img/house.png?raw=true"
+                                alt="house"><br>
+                            <h2>Широкий вибір</h2>
+                            <p>Понад 50 видів котеджів
+                                з усіма зручностями</p>
+                        </td>
+                        <td class="pluses-container">
+                            <img src="https://github.com/TarasNaumov/HataPlus/blob/master/img/tree.png?raw=true"
+                                alt="tree"><br>
+                            <h2>Дика природа</h2>
+                            <p>Скалиста місцевіть, свіже повітря, та риболовля</p>
+                        </td>
+                    </tr>
+                </table>
+            </td>
+            <td class="bg-transparent"></td>
+        </tr>
+    </table>
+    <table class="house">
+        <td class="bg-transparent"></td>
+        <td>
+            <table>
+                <tr>
+                    <td><img src="https://github.com/TarasNaumov/HataPlus/blob/master/img/montreal.jpg?raw=true"
+                            alt="montreal"></td>
+                    <td>
+                        <h2>MONTREAL (332 м2)</h2>
+                        <p>Містечко оточене сосновим і листяним лісом, чи не на кожній дільниці сосна, береза або клен.
+                        </p>
+                        <p>Загальна площа будови: 290 м2 Кількість спалень: 3 Гараж: 2 авто</p>
+                    </td>
+                </tr>
+
+            </table>
+        </td>
+        <td class="bg-transparent"></td>
+    </table>
+    <table class="house">
+        <td class="bg-transparent"></td>
+        <td>
+            <table>
+                <tr>
+                    <td>
+                        <h2>EDMONTON (338 м2)</h2>
+                        <p>Тут є все для комфортної життя: вода
+                            з власної скважини, газова опалення, високошвидкісна Інтернет.</p>
+                        <p>Загальна площа будови: 312 м2
+                            Кількість спалень: 4
+                            Гараж: 2 авто</p>
+                    </td>
+                    <td><img src="https://github.com/TarasNaumov/HataPlus/blob/master/img/edmonton.jpg?raw=true"
+                            alt="edmonton"></td>
+                </tr>
+
+            </table>
+        </td>
+        <td class="bg-transparent"></td>
+    </table>
+    <table class="house">
+        <td class="bg-transparent"></td>
+        <td>
+            <table>
+                <tr>
+                    <td><img src="https://github.com/TarasNaumov/HataPlus/blob/master/img/calgary.jpg?raw=true"
+                            alt="calgary"></td>
+                    <td>
+                        <h2>CALGARY (294 м2)</h2>
+                        <p>Для діток тут побудована ігровий
+                            та спортивний майданчик, а недалеко
+                            від містечка знаходяться дитячий садок.</p>
+                        <p>Загальна площа будови: 272 м2
+                            Кількість спалень: 3
+                            Гараж: 2 авто</p>
+                    </td>
+                </tr>
+
+            </table>
+        </td>
+        <td class="bg-transparent"></td>
+    </table>
+    <table class="action">
+        <tr>
+            <td class="bg-transparent"></td>
+            <td>
+                <p class="title-action">Отримай знижку -10%</p>
+                <p class="action-info">Відправ цього листа 10 друзям та отримай знижку на усі котеджі.
+                    Акція триває в період з 21.04.2018 по 31.10.2018 включно.</p>
+                <a href="#">Прийняти участь</a>
+            </td>
+            <td class="bg-transparent"></td>
+        </tr>
+    </table>
+    <table class="footer">
+        <tr>
+            <td class="bg-gray"></td>
+            <td>
+                <div>
+                    <a href="#"><img src="" alt="twitter"></a>
+                    <a href="#"><img src="" alt="facebook"></a>
+                    <a href="#"><img src="" alt="wifi"></a>
+                    <a href="#"><img src="" alt="pinterest"></a>
+                    <a href="#"><img src="" alt="google"></a>
+                    <a href="#"><img src="" alt="basketball"></a>
+                    <a href="#"><img src="" alt="linkedin"></a>
+                    <a href="#"><img src="" alt="two circle"></a>
+                </div>
+            </td>
+            <td class="bg-gray"></td>
         </tr>
     </table>
 </body>
+
 </html>
