--- a/email.html
+++ b/email.html
@@ -167,7 +167,7 @@
             <td class="bg-gray"></td>
             <td>
                 <div>
-                    <a href="#"><img src="" alt="twitter"></a>
+                    <a href="#"><img src="https://github.com/TarasNaumov/HataPlus/blob/master/img/twitter.png?raw=true" alt="twitter"></a>
                     <a href="#"><img src="" alt="facebook"></a>
                     <a href="#"><img src="" alt="wifi"></a>
                     <a href="#"><img src="" alt="pinterest"></a>
