--- a/email.html
+++ b/email.html
@@ -9,7 +9,6 @@
 </head>
 
 <body style="border:none;box-sizing:border-box;font-size:14px;margin:0;padding:0;text-decoration:none">
-    <style></style>
     <table style="border:none;box-sizing:border-box;margin:0;padding:0;text-decoration:none;width:100%">
         <tbody>
             <tr style="border:none;box-sizing:border-box;margin:0;padding:0;text-decoration:none">
@@ -67,7 +66,7 @@
     </tr>
     </tbody>
     </table>
-    <table>
+    <table style="margin-bottom: -8px;">
         <tr>
             <td class="bg-transparent"
                 style="background:#f5f5f5;height: 100%;border:none;box-sizing:border-box;margin:0;padding:0;text-decoration:none;width: 20%;">
@@ -279,7 +278,7 @@
                     <tbody>
                         <tr style="border:none;box-sizing:border-box;margin:0;padding:0;text-decoration:none">
                             <td
-                                style="background-color:#fd8300;border:none;box-sizing:border-box;margin:0;padding:35px;text-align:center;text-decoration:none">
+                                style="background: url(https://github.com/TarasNaumov/HataPlus/blob/master/img/action-bg.jpg?raw=true);border:none;box-sizing:border-box;margin:0;padding:35px;text-align:center;text-decoration:none">
                                 <p class="title-action"
                                     style="border:none;box-sizing:border-box;color:#fff;font-family:Arial;font-size:24px;font-weight:700;line-height:24px;margin:0;margin-bottom:12px;padding:0;text-align:center;text-decoration:none">
                                     Отримай знижку -10%</p>
